Updated the VDM Model to split TC and TC status OK
Added error message for TC error in launch tabs

Added check for TC status OK in launch delegate for debug

git-svn-id: https://overture.svn.sourceforge.net/svnroot/overture/trunk@2373 2b2d4d09-c93c-414a-ad04-6e973f5c1cff